5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1798_2570.log
== TEST (2019-06-09 17:26:19) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:26:52) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:27:00) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:27:04) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:27:10) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
print(media)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:32:31) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=0
p=0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
	if(j<x[i]):
		p=p*(abs(x[i]-media)**size(x)
			  j=j+1
print(p)
	
-- ERROR:
File "XXXX", line 11
    j=j+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:32:37) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=0
p=0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
	if(j<x[i]):
		p=p*(abs(x[i]-media)**size(x)
		j=j+1
print(p)
	
-- ERROR:
File "XXXX", line 11
    j=j+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:32:46) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=0
p=0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
	if(j<x[i]):
		p=p*(abs(x[i]-media)**size(x)
			  j=j+1
print(p)
	
-- ERROR:
File "XXXX", line 11
    j=j+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:34:05) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=0
p=0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
	if(j<x[i]):
		p = p*(abs(x[i]-media))**size(x)
		j=j+1
print(p)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 17:34:24) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=0
p=0
for i in range(size(x)):
	soma = soma + x[i]
	media = soma/size(x)
	if(j<x[i]):
		p = p*(abs(x[i]-media))**size(x)
		j=j+1
print(p)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:41) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	d = d*abs(x[i]-media)
	q= d**(1/size(x))
print(a,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:23) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	g= d*abs(x[i]-media)
	q= g**(1/size(x))
print(a,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:28) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	g= d*abs(x[i]-media)
	q= g**(1/size(x))
print(a,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:46) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	d= d*(abs(x[i]-media))
	q= g**(1/size(x))
print(a,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:51) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	d= d*(abs(x[i]-media))
	q= g**(1/size(x))
print(a,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:33) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= g**(1/size(x))
print(a,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:44) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= j**(1/size(x))
print(a,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:33:45) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= j**(1/size(x))
print(a,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:34:02) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= j**(1/size(x))
print(q,3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:34:03) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= j**(1/size(x))
print(q,3)
	
-- EXECUTION TIME:
0.94014
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
Digite o vetor: 8.838851702076843 3
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
Digite o vetor: 3.757161916919124 3
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
Digite o vetor: 0.2118502762217699 3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:34:33) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= j**(1/size(x))
print(round(q,3)
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:34:37) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= j**(1/size(x))
print(round(q,3)
	
-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:34:52) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= j**(1/size(x))
print(round(q,3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:35:01) 
-- CODE:
from numpy import*
x = array(eval(input("Digite o vetor: ")))
soma = 0
j=1
for i in range(size(x)):
	soma = soma + x[i]
media = soma/size(x)
for i in range(size(x)):
	j= j*abs(x[i]-media)
	q= j**(1/size(x))
print(round(q,3))
	
-- EXECUTION TIME:
1.12424
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
